--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -12,7 +12,7 @@
 
   <!-- Github -->
   <li class="navigation__item">
-    <a href="https://github.com/solobat" title="@onevcat 的 Github" target="_blank">
+    <a href="https://github.com/solobat" title="@solobat 的 Github" target="_blank">
       <i class='social fa fa-github'></i>
       <span class="label">Github</span>
     </a>
