--- a/post.hbs
+++ b/post.hbs
@@ -17,8 +17,7 @@
     </section>
 
   </article>
-  <!-- 多说公共JS代码 end -->
   {{> read-more}}
-  {{!-- {{> comments}} --}}
+  {{> comments}}
 
 {{/post}}
